moving on to technician and user management